--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -11,6 +11,7 @@
   width: 600px;
   background-color: #000000a9;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   gap: 1em;
